; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_check_ext_attr_header.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_check_ext_attr_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_ext_attr_header = type { i64, i32 }

@EXT2_EXT_ATTR_MAGIC_v1 = common dso_local global i64 0, align 8
@EXT2_EXT_ATTR_MAGIC = common dso_local global i64 0, align 8
@EXT2_ET_BAD_EA_HEADER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ext2_ext_attr_header*)* @check_ext_attr_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_ext_attr_header(%struct.ext2_ext_attr_header* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ext2_ext_attr_header*, align 8
  store %struct.ext2_ext_attr_header* %0, %struct.ext2_ext_attr_header** %3, align 8
  %4 = load %struct.ext2_ext_attr_header*, %struct.ext2_ext_attr_header** %3, align 8
  %5 = getelementptr inbounds %struct.ext2_ext_attr_header, %struct.ext2_ext_attr_header* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @EXT2_EXT_ATTR_MAGIC_v1, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.ext2_ext_attr_header*, %struct.ext2_ext_attr_header** %3, align 8
  %11 = getelementptr inbounds %struct.ext2_ext_attr_header, %struct.ext2_ext_attr_header* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @EXT2_EXT_ATTR_MAGIC, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %20, label %15

15:                                               ; preds = %9, %1
  %16 = load %struct.ext2_ext_attr_header*, %struct.ext2_ext_attr_header** %3, align 8
  %17 = getelementptr inbounds %struct.ext2_ext_attr_header, %struct.ext2_ext_attr_header* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 1
  br i1 %19, label %20, label %22

20:                                               ; preds = %15, %9
  %21 = load i32, i32* @EXT2_ET_BAD_EA_HEADER, align 4
  store i32 %21, i32* %2, align 4
  br label %23

22:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %20
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
